--- a/index.html
+++ b/index.html
@@ -168,6 +168,9 @@
 				for(var i = 1; i < arrayData.length; ++i) {
 					arrayData[i].splice(2, 0, null);
 					arrayData[i][3] = new Date(arrayData[i][3]);
+					if(arrayData[i][3].getYear() == MCO.getYear() && arrayData[i][3].getMonth() == MCO.getMonth() && arrayData[i][3].getDate() == MCO.getDate()) {
+						idxMCO = i;
+					}
 				}
 				arrayData.push([arrayData[arrayData.length-1][0], arrayData[arrayData.length-1][1], -1, arrayData[arrayData.length-1][3]]);
 				var max = arrayData[arrayData.length-1][0];
