--- a/index.html
+++ b/index.html
@@ -602,7 +602,10 @@
 </div>
 
 <div id="RtAnalysis" class="tabcontent">
-Coming in a few days
+<br>
+<br>
+<br>
+<div style="float: left">Coming in a few days</div>
 </div>
 
 </body>
