Title name of trajectory charts

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 				var options =
 				{
 					focusTarget: 'category',
-					title: 'Nationwide total - new vs cumulative cases',
+					title: 'Trajectory - Nationwide total',
 					titleTextStyle : {
 						fontSize: 20
 					},
@@ -406,7 +406,7 @@
 				data.setColumnProperty(dateColumn, 'role', 'tooltip');
 				var options =
 				{
-					title: 'By state - new vs cumulative cases (hover legend to highlight)',
+					title: 'Trajectory - By state (hover legend to highlight)',
 					titleTextStyle : {
 						fontSize: 20
 					},
