--- a/index.html
+++ b/index.html
@@ -565,61 +565,75 @@
 
 
 		function drawRtChart(areaName) {
-			$.get("./Rt/data/" + areaName + ".csv", function(csvString) {
-				<!-- Rt-plot -->
-				var arrayData = $.csv.toArrays(csvString, {onParseValue: $.csv.hooks.castToScalar});
-				for(var i = 1; i < arrayData.length; ++i) {
-					arrayData[i][0] = new Date(arrayData[i][0]);
-				}
-				var data = new google.visualization.arrayToDataTable(arrayData);
-				data.setColumnLabel(1, 'Rt');
-				data.setColumnProperty(2, 'role', 'interval');
-				data.setColumnProperty(3, 'role', 'interval');
-				data.setColumnProperty(4, 'role', 'interval');
-				data.setColumnProperty(5, 'role', 'interval');
-				var options =
-				{
-					title: "Rt - " + areaName + " (CI: 90%, 50%)",
-					titleTextStyle : {
-						fontSize: 20
-					},
-					chartArea: {
-						left: '15%',
-						top: '10%',
-						width: '80%',
-						height: '80%'
-					},
-					hAxis: {
-						title: "Date",
-						minorGridlines: { count:0 },
-						format: 'dd-MMM',
-						viewWindow: {
-							min: new Date(2020, 3-1, 1),
+			var fileExists = true;
+			$.get("./Rt/data/" + areaName + ".csv", function(data) {
+			}).fail(function() {
+				fileExists = false;
+				var tag_id = document.getElementById("Rt-" + areaName);
+				var a = Math.log(10.0);
+				tag_id.innerHTML = "<span style='font-family:Arial; font-size:20px; font-weight:bold;'>" + "Rt - " + areaName + ": too few cases to calculate Rt</span>";
+			});
+			
+			if(!fileExists) {
+				var tag_id = document.getElementById("Rt-" + areaName);
+				tag_id.innerHTML('innerHTML');
+			} else {
+				$.get("./Rt/data/" + areaName + ".csv", function(csvString) {
+					<!-- Rt-plot -->
+					var arrayData = $.csv.toArrays(csvString, {onParseValue: $.csv.hooks.castToScalar});
+					for(var i = 1; i < arrayData.length; ++i) {
+						arrayData[i][0] = new Date(arrayData[i][0]);
+					}
+					var data = new google.visualization.arrayToDataTable(arrayData);
+					data.setColumnLabel(1, 'Rt');
+					data.setColumnProperty(2, 'role', 'interval');
+					data.setColumnProperty(3, 'role', 'interval');
+					data.setColumnProperty(4, 'role', 'interval');
+					data.setColumnProperty(5, 'role', 'interval');
+					var options =
+					{
+						title: "Rt - " + areaName + " (CI: 90%, 50%)",
+						titleTextStyle : {
+							fontSize: 20
 						},
-					},
-					vAxis: {
-						minorGridlines: { count:0 },
-						viewWindow: {
-							max: 4.0,
-							min: 0.0,
+						chartArea: {
+							left: '15%',
+							top: '10%',
+							width: '80%',
+							height: '80%'
 						},
-					},
-					legend: {
-						position: 'none',
-					},
-					backgroundColor: {
-						fill: 'FFFAFA'
-					},
-					intervals: {'style':'area'},
-					width: '100%',
-					height: '100%'
-				};
-				var chart = new google.visualization.LineChart(document.getElementById("Rt-" + areaName));
-				var formatter = new google.visualization.DateFormat({pattern: 'dd-MMM'});
-				formatter.format(data, 0);
-				chart.draw(data, options);
-				drawAxisLine(chart, MCO, 'MCO');
-			});				
+						hAxis: {
+							title: "Date",
+							minorGridlines: { count:0 },
+							format: 'dd-MMM',
+							viewWindow: {
+								min: new Date(2020, 3-1, 1),
+							},
+						},
+						vAxis: {
+							minorGridlines: { count:0 },
+							viewWindow: {
+								max: 4.0,
+								min: 0.0,
+							},
+						},
+						legend: {
+							position: 'none',
+						},
+						backgroundColor: {
+							fill: 'FFFAFA'
+						},
+						intervals: {'style':'area'},
+						width: '100%',
+						height: '100%'
+					};
+					var chart = new google.visualization.LineChart(document.getElementById("Rt-" + areaName));
+					var formatter = new google.visualization.DateFormat({pattern: 'dd-MMM'});
+					formatter.format(data, 0);
+					chart.draw(data, options);
+					drawAxisLine(chart, MCO, 'MCO');
+				});
+			}
 		}
     </script>
 </head>
