Adding a GitHub link

--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
 	</div>
 	<br>
 	<br>
-	<div id="reference">
+	<div id="reference" class="reference">
 		Reference:
 		<ul>
 			<li>Official Portal Ministry of Health Malaysia COVID-19 (Media Centre)<br> 
@@ -732,7 +732,7 @@
 	</div>
 	<br>
 	<br>
-	<div id="referenceRt">
+	<div id="referenceRt" class="reference">
 		Reference:
 		<ul>
 			<li>Estimating COVID-19's $R_t$ in Real-Time<br>
@@ -748,5 +748,9 @@
 	</div>
 </div>
 
+<div class="reference">
+	Source code:<br>
+	<a target="_blank" href="https://github.com/drxyzw/WuhanCoronavirus-Malaysia">https://github.com/drxyzw/WuhanCoronavirus-Malaysia</a><br>
+</div>
 </body>
 
