--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
 	<link rel="stylesheet" type="text/css" href="index.css" />
+	<title>Wuhan coronavirus in Malaysia</title>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 	<script src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
@@ -650,7 +651,7 @@
 		</marker>
 	</defs>
 </svg>
-<h1>Wuhan virus (COVID-19) statistics in Malaysia</h1>
+<h1>Wuhan coronavirus (COVID-19) statistics in Malaysia</h1>
 <button class="tablink" onclick="openBootstrapTab('CaseNumberAnalysis', this)" id="defaultOpen">Case number analysis</button>
 <button class="tablink" onclick="openBootstrapTab('RtAnalysis', this)">R(t) analysis</button>
 
