--- a/index.html
+++ b/index.html
@@ -620,6 +620,8 @@
 								min: 0.0,
 							},
 						},
+						seriesType: 'bars',
+						series: {5: {type: 'line'}},
 						legend: {
 							position: 'none',
 						},
@@ -630,7 +632,8 @@
 						width: '100%',
 						height: '100%'
 					};
-					var chart = new google.visualization.LineChart(document.getElementById("Rt-" + areaName));
+					var chart = new google.visualization.ComboChart(document.getElementById("Rt-" + areaName));
+					<!-- var chart = new google.visualization.LineChart(document.getElementById("Rt-" + areaName)); -->
 					var formatter = new google.visualization.DateFormat({pattern: 'dd-MMM'});
 					formatter.format(data, 0);
 					chart.draw(data, options);
