Setting types to a Rt combo chart

--- a/index.html
+++ b/index.html
@@ -620,8 +620,8 @@
 								min: 0.0,
 							},
 						},
-						seriesType: 'bars',
-						series: {5: {type: 'line'}},
+						seriesType: 'line',
+						series: {6: {type: 'bars'}},
 						legend: {
 							position: 'none',
 						},
