--- a/index.html
+++ b/index.html
@@ -593,9 +593,10 @@
 					data.setColumnProperty(3, 'role', 'interval');
 					data.setColumnProperty(4, 'role', 'interval');
 					data.setColumnProperty(5, 'role', 'interval');
+					data.setColumnLabel(6, 'New infected cases');
 					var options =
 					{
-						title: "Rt - " + areaName + " (CI: 50%, 90%)",
+						title: "Rt/cases - " + areaName + " (CI: 50/90%)",
 						titleTextStyle : {
 							fontSize: 20
 						},
@@ -610,7 +611,7 @@
 							1: {targetAxisIndex: 1, type: 'bars', color: 'orange'}
 						},
 						hAxis: {
-							title: "Date",
+							title: "Estimated infection date",
 							minorGridlines: { count:0 },
 							format: 'dd-MMM',
 							viewWindow: {
@@ -630,7 +631,8 @@
 							viewWindow: {
 								max: 200,
 								min: 0,
-							}
+							},
+							format: '##.#'
 							}
 							},
 						legend: {
@@ -645,8 +647,10 @@
 					};
 					var chart = new google.visualization.ComboChart(document.getElementById("Rt-" + areaName));
 					<!-- var chart = new google.visualization.LineChart(document.getElementById("Rt-" + areaName)); -->
-					var formatter = new google.visualization.DateFormat({pattern: 'dd-MMM'});
-					formatter.format(data, 0);
+					var dateFormatter = new google.visualization.DateFormat({pattern: 'dd-MMM'});
+					dateFormatter.format(data, 0);
+					var caseFormatter = new google.visualization.NumberFormat({pattern: '#,##0'});
+					caseFormatter.format(data, 6);
 					var view = new google.visualization.DataView(data);
 					view.hideColumns([7]);
  
@@ -672,7 +676,7 @@
 </svg>
 <h1>Wuhan coronavirus (COVID-19) statistics in Malaysia</h1>
 <button class="tablink" onclick="openBootstrapTab('CaseNumberAnalysis', this)" id="defaultOpen">Case number analysis</button>
-<button class="tablink" onclick="openBootstrapTab('RtAnalysis', this)">Under cross-validation <s>R(t) analysis</s></button>
+<button class="tablink" onclick="openBootstrapTab('RtAnalysis', this)">R(t) analysis</s></button>
 
 <div id="CaseNumberAnalysis" class="tabcontent">
 	<div id="wrapper1">
