Changing color on Rt chart

--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
 						series: {
 							0: {targetAxisIndex: 0, type: 'line'},
 							1: {targetAxisIndex: 1, type: 'bars', color: 'orange'},
-							2: {targetAxisIndex: 1, type: 'bars', color: 'green'}
+							2: {targetAxisIndex: 1, type: 'bars', color: 'darkviolet'}
 						},
 						hAxis: {
 							title: "Date",
